misc test clean up; update to use jvm-test-suite (#7849)